// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render 1 1 1`] = `
<DocumentFragment>
  <div
    aria-expanded="false"
    class="ui item dropdown"
    role="listbox"
    tabindex="0"
  >
    <div
      aria-atomic="true"
      aria-live="polite"
      class="divider text"
      role="alert"
    >
      Filter by labels
    </div>
    <i
      aria-hidden="true"
      class="dropdown icon"
    />
    <div
      class="menu transition"
    >
      <div
        aria-checked="false"
        class="item"
        id="3"
        name="fun"
        role="option"
      />
      <div
        aria-checked="false"
        class="item"
        id="5"
        name="Easy"
        role="option"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render 1 1 2`] = `
<DocumentFragment>
  <div
    aria-expanded="true"
    class="ui active visible item dropdown"
    role="listbox"
    tabindex="0"
  >
    <div
      aria-atomic="true"
      aria-live="polite"
      class="divider text"
      role="alert"
    >
      Filter by labels
    </div>
    <i
      aria-hidden="true"
      class="dropdown icon"
    />
    <div
      class="menu transition visible"
    >
      <div
        aria-checked="false"
        class="item"
        id="3"
        name="fun"
        role="option"
      />
      <div
        aria-checked="false"
        class="item"
        id="5"
        name="Easy"
        role="option"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render 1 1 3`] = `
<DocumentFragment>
  <div
    aria-expanded="false"
    class="ui item dropdown"
    role="listbox"
    tabindex="0"
  >
    <div
      aria-atomic="true"
      aria-live="polite"
      class="divider text"
      role="alert"
    >
      Filter by labels
    </div>
    <i
      aria-hidden="true"
      class="dropdown icon"
    />
    <div
      class="menu transition"
    >
      <div
        aria-checked="false"
        class="item"
        id="3"
        name="fun"
        role="option"
      />
      <div
        aria-checked="false"
        class="item"
        id="5"
        name="Easy"
        role="option"
      />
    </div>
  </div>
</DocumentFragment>
`;
